Added metrics-app repo

--- a/cluster/metrics-app/flux-patch.yaml
+++ b/cluster/metrics-app/flux-patch.yaml
@@ -14,6 +14,17 @@ spec:
             - --git-poll-interval=5m
             - --sync-interval=5m
             - --ssh-keygen-dir=/var/fluxd/keygen
+            - --k8s-allow-namespace=metrics-app
+            - --git-url=git@github.com:vladimir-babichev/flux-metrics-app
             - --git-branch=master
-            - --git-path=cluster
-            - --git-url=git@github.com:vladimir-babichev/multi-tenancy
+            - --git-path=environment/dev
+            - --git-sync-tag=flux-sync-dev
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: RoleBinding
+metadata:
+  name: flux
+subjects:
+  - kind: ServiceAccount
+    name: flux
+    namespace: metrics-app
